# lz-string

./: README.md  pyproject.toml
src/lzstring2/: __init__.py
tests/: test_binary_compatibility.py  test_hello.py
