[project]
name = "lzstring2"
version = "0.1.0"
description = "A reimplementation of the lz-string node package."
readme = "README.md"
authors = [{ name = "Sasha Lopoukhine", email = "superlopuh@gmail.com" }]
requires-python = ">=3.10"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pytest>=8.3.5",
]
